﻿12/14/2014 0.8.7.2b
  Removed essentia gas dynamic texture generation.

12/14/2014 0.8.7.1b
  Changed version number scheme: Release.Major.Minor.Bugfix
  Fixes #103: Warded glass recipes fixed.
  Fixes #102: Servers no longer crash third-party code is exploring the gearbox tile.  

11/30/2014 0.8.7b
  Reproduced provider render bug thanks to the suggestion of Einsvies to test with Ars Magica 2. #99
  Renderer now reacquires the texture reference every draw call.

11/30/2014 0.8.6b
  Fixed provider render bug?

11/29/2014 0.8.6b
  Updated forge to 10.13.2.1230
  Sided provider render ID's.
  Minor tweaks to provider renderer.

11/29/2014 0.8.5b
  Fixes #100: A.C.T. Checks user permissions again.
  Potential Fix #99 Un-cached texture location in provider renderer.
  Cleaned up terminal work code.
  Added Wireless E.Term. recipe and included in E.Term. research.

11/28/2014 0.8.5b
  Fixes #81: Added Wireless Essentia Terminal.
  Major GUI cleanup for essentia terminals and cells.

11/27/2014 0.8.5b
  Created model for gearboxes.
  Fixed an A.C.T crafting bug.
  A.C.T. search bar can be focused with right-click.

11/26/2014 0.8.5b
  Changed name of storage cell "casing" to "housing" to conform to AE.
  Fixes #97: NEI Shift+Click in the A.C.T. now includes ore dictionary matches, this also fixes shift-crafting not matching properly.
  A.C.T. Search bar opens with focus again.

11/25/2014 0.8.4b
  Lots of AE network code fixes. Lots.
  Fixes #94: Cell recipe now uses glass if warded glass has been disabled.
  Fixes #96: Import bus can now import from Essentia Buffers.

11/23/2014 0.8.4b
  Storage bus no longer requires a filter to be able to interact with a jar.
  Fixes #93: Essentia terminal no longer drops inventory contents when wrenched.
  Fixes #44: Subnets are now supported by placing an Essentia Storage Bus against a ME Interface block.
  Note: Filter is not respected for subnet operation.

11/22/2014 0.8.4b
  Cleaned up provider rendering code.